--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "2.7.14",
+    "vue-router": "^2.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
